--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -23,22 +23,20 @@
   </div>
 
   <div class="form-group col-md-3">
-  <%=select_tag 'degree_select', options_for_select([['大學部','3'],['研究所','2']],dept.nil? ? 3 :dept.degree), class:'form-control', onChange:"change_degree();"%>
+		<%=select_tag 'degree_select', options_for_select([['大學部','3'],['研究所','2']],dept.nil? ? 3 :dept.degree), class:'form-control', onChange:"change_degree();"%>
   </div>
   <div class="form-group col-md-5">
-  <%=select_tag 'dept_under_select', options_for_select(dept_undergrad,current_user.department_id), class:'form-control'%>
-  <%=select_tag 'dept_grad_select', options_for_select(dept_grad,current_user.department_id), class:'form-control'%>
+		<%=select_tag 'dept_under_select', options_for_select(dept_undergrad,current_user.department_id), class:'form-control'%>
+		<%=select_tag 'dept_grad_select', options_for_select(dept_grad,current_user.department_id), class:'form-control'%>
   </div>
 
   <div class="form-group col-md-3 row no-margin-left no-padding-left">
-  <div class="col-md-6 no-padding-left no-padding-right">
-  <h4 style="margin-top:8px;">
-  入學年度
-  </h4>
-  </div>
-  <div class="col-md-6">
-  <%=select_tag 'grade_select', options_from_collection_for_select(Semester.all.group(:year).order(:id),:year,:year, current_user.year), class:'form-control'%>
-  </div>
+		<div class="col-md-6 no-padding-left no-padding-right">
+			<h4 style="margin-top:8px;">入學年度</h4>
+		</div>
+		<div class="col-md-6">
+			<%=select_tag 'grade_select', options_from_collection_for_select(Semester.all.group(:year).order(:id),:year,:year, current_user.year), class:'form-control'%>
+		</div>
   </div>
 
   <%=submit_tag "確定", class: "btn btn-success" %>
