--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -84,71 +84,115 @@
 </ul>
 
 <%= javascript_include_tag "courses/table", "data-turbolinks-track" => true %>
+<% if current_user %>	
 <script>
 	$(document).ready(function(){	
-
 		//歷年課表
 		$(".view-timetable").click(function(){
 			show_timetable_on_modal($(this).attr("sem"), true);
 		});
-
-		<% if current_user %>
-			$("[name='my-checkbox']").bootstrapSwitch({size:"mini", state: false});
-		<% end %>
 	});
-
-
+	
+  function group_share(share_opt, id, data){
+    var $target = $('#'+id);
+    var share_link = function(div_id, share_url){
+      console.log(share_url);
+      new Share("#"+div_id,{
+          ui: {
+            flyout: "middle left",
+            button_text :"分享",
+            button_font : false,
+          },
+          networks: {
+            facebook: {
+              app_id: "<%=Facebook::APP_ID%>",
+              url :share_url,
+            },
+            google_plus:{ url :share_url },
+            twitter:{ url :share_url, },
+            pinterest:{ enabled:false },
+            email:{ enabled:false }
+          }
+      });
+    }; 
+    var switchOnChange = function(event, state){
+      if(state){
+        if(!confirm("開啟分享後，擁有連結的使用者皆可觀看您的課表。\n 確認要分享嗎?")){
+          $switch.bootstrapSwitch('toggleState','skip');
+          return false ;
+        }
+        //ajax 
+        $.ajax({
+          method: "POST",
+          url: "/user/update",
+          data: {type:"share", data:true, sem_id: data.semester_id},
+          success:function(res){                 
+              $switch.bootstrapSwitch('destroy');
+              $switch.remove();
+              $target.popover('disable');
+              toastr["success"]("您可以使用分享連結分享至社交網站");
+              share_link(id, "<%=j root_url %>shares/"+res.hash_share);     
+            }
+        });        
+      }
+    };
+    
+    if(share_opt){
+      $target.addClass('pull-right');
+    //  console.log("<%=j root_url %>shares/"+data.hash_share);
+      share_link(id, "<%=j root_url %>shares/"+data.hash_share);
+    }else{
+      $target.popover({ 
+        content:"開啟分享連結",
+        placement:"auto",
+        trigger : "hover",
+        container :"body"
+      });
+      var $switch = $('<input>').attr('type', 'checkbox').attr('id','bootstrap-switch');
+      $target.html($switch);
+      $switch.bootstrapSwitch({
+        size:'mini',
+        onColor: 'success',
+        onSwitchChange: switchOnChange
+      });  
+    }   
+  }//group_share
 	function show_timetable_on_modal(semester_id, showNow){
 		var result=0 ;
-		$("#global_modal .modal-content").html('loading..');
 		$.ajax({
-			//async: true, // This will make call synchronous
-			url: "/user/get_courses?type=course_table&sem_id="+semester_id,
+			url: "/user/get_courses",
+			data:{
+				type: "course_table",
+				sem_id: semester_id
+			},
 			dataType: "json",
 			success: function(data){
-			//	console.log(data);
 				var result = $.extend(true, [], data);
-				$("#global_modal .modal-content").html('').append('<div class="modal-body"></div>');
 				var $table = $('<table>').addClass('table table-bordered');
         data.config = {
           deletable: false ,
           selectable: false,
           popover: true,
-		      downloadable: true,
+					downloadable: true,
 		      semester_id: semester_id
         };
-
 				$table.CourseTable(data) ;			
-				showGlobalModal(data.semester_name, $table);
-				<% if current_user.canShare? %>
+				
+				var share_div = '<div class="pull-right" id="share-opt" style="margin-right: 10px;"></div>';
+				showGlobalModal(data.semester_name + share_div, $table);
+				
 				setTimeout(function(){ //wait for the modal show
+				if(data.hash_share){
           $table.CourseTable("renderImg", "upload") ;
-          return false ;
-         }, 500);
-				<% end %>
-
+          group_share(true, 'share-opt', {hash_share: data.hash_share}) ;
+        }else{ 
+          group_share(false, 'share-opt', {semester_id: semester_id}) ;    
+        }
+			    return false ;
+        }, 500);
       }
 		});
-		return result ;
+		return ;
 	}
-
-	function add_to_cart(id,type){
-		$.ajax({
-			type: "GET",
-			url : "/courses/add_to_cart",
-			data : {
-				cd_id:id,
-				type:type
-			},
-			dataType : "json",
-			success : function(data){
-				toastr[data["class"]](data["text"]);
-				if(type=="delete"){
-					$("#global_modal .modal-body").load("/courses/show_cart");
-				}			
-			}
-		
-		});
-	}
-
 </script>
+<% end %>	
