--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,8 +24,9 @@
 						<% end %>
 							<li><a href="/departments" rel="nofollow">系<span class="badge pull-right"><%=Department.all.count%></span></a></li>
 							<li><a href="/admin/course_maps/" rel="nofollow">課程地圖</a></li>
-							<li><a href="/main/student_import" rel="nofollow">手動匯入</a></li>
-							<li><a href="/admin/ee104" rel="nofollow">電機104級畢業學分預審</a></li>								
+							<li><a href="/admin/user_statistics" rel="nofollow">新使用者統計</a></li>
+							<!--<li><a href="/main/student_import" rel="nofollow">手動匯入</a></li>
+							<li><a href="/admin/ee104" rel="nofollow">電機104級畢業學分預審</a></li>-->							
 						</ul>	
 					</li>
 				<% end %>
