--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -7,39 +7,52 @@
 
 <div class="well" style="text-align:left">
   <h1>更改個人資料</h1>
- <%= form_tag "/user/update", class:"form-inline" do %>  <!-- user_update_path -->
-  <div class="form-group col-md-12">
-  <h4><%=label_tag '更改姓名'%></h4>
-  <%=text_field_tag "name",current_user.name ,class:"form-control"%>
-  </div>
-
-  <div class="form-group col-md-12"> 
-  <h4><%=label_tag '更改email' %></h4>
-  <%=email_field_tag "email",current_user.email,class:"form-control" %>
-  </div>
-
-  <div class="form-group col-md-12">
-    <h4><%=label_tag '更改系級' %></h4>
-  </div>
-
-  <div class="form-group col-md-3">
-		<%=select_tag 'degree_select', options_for_select([['大學部','3'],['研究所','2']],dept.nil? ? 3 :dept.degree), class:'form-control', onChange:"change_degree();"%>
-  </div>
-  <div class="form-group col-md-5">
-		<%=select_tag 'dept_under_select', options_for_select(dept_undergrad,current_user.department_id), class:'form-control'%>
-		<%=select_tag 'dept_grad_select', options_for_select(dept_grad,current_user.department_id), class:'form-control'%>
-  </div>
-
-  <div class="form-group col-md-3 row no-margin-left no-padding-left">
-		<div class="col-md-6 no-padding-left no-padding-right">
-			<h4 style="margin-top:8px;">入學年度</h4>
-		</div>
-		<div class="col-md-6">
-			<%=select_tag 'grade_select', options_from_collection_for_select(Semester.all.group(:year).order(:id),:year,:year, current_user.year), class:'form-control'%>
+ <%= form_for current_user,url: "/user/update",html:{class:"form-horizontal"} do |f| %>  <!-- user_update_path -->
+  <div class="form-group">
+		<h4><%=label_tag 'Name',"Name",class:"col-sm-1 control-label"%></h4>
+		<div class="col-md-10">
+			<%=f.text_field :name,class:"form-control"%>
 		</div>
   </div>
 
-  <%=submit_tag "確定", class: "btn btn-success" %>
+  <div class="form-group "> 
+		<h4><%=label_tag 'Email',"Email",class:"col-sm-1 control-label" %></h4>
+		<div class="col-md-10">
+			<%=email_field_tag "user[email]",current_user.email.include?("please.change.me") ? "" : current_user.email,class:"form-control" %>
+		</div>
+		
+	</div>
+	<div class="form-group ">
+		<div class="col-md-offset-1">
+			<p class="">做為二手書連絡資訊用，NCTU+不會寄任何信件給您，請放心~</p>
+		</div>
+	</div>
+  <div class="form-group">
+    <h4><%=label_tag '系級',"系級",class:"col-sm-1 control-label" %></h4>
+		<div class="col-md-11">
+			<div class="col-md-2 no-padding-left">
+			<%=select_tag 'degree_select', options_for_select([['大學部','3'],['研究所','2']],dept.nil? ? 3 :dept.degree), class:'form-control', onChange:"change_degree($(this).val());"%>
+		</div>
+		<div class="col-md-5 no-padding-left">
+			<%=f.select :department_id,options_for_select(@dept_undergrad,current_user.department_id),{}, {class:'form-control',id:"under_grad"}%>
+			<%=f.select :department_id,options_for_select(@dept_grad,current_user.department_id),{}, {class:'form-control',id:"grad"}%>
+		</div>
+		<div class="col-md-5 no-padding-left">
+			<div class="col-md-4"><h4 style="margin-top:8px;">入學年度</h4></div>
+			<div class="col-md-6">
+				<%=f.select :year, options_from_collection_for_select(Semester.all.group(:year).order(:id),:year,:year, current_user.year),{}, class:'form-control'%>
+			</div>
+		</div>
+		</div>
+  </div>
+
+  <div class="form-group " >
+		<div class="col-md-12">
+		<%=submit_tag "送出", class: "btn btn-lg btn-success" %>
+		</div>
+	</div>
+
+  
 <% end %>
 
 
@@ -51,7 +64,7 @@
     
     <% if !dept.nil? %>
       $("#user_form").hide();
-      change_degree();
+      change_degree(<%=current_user.degree%>);
     <% else %>
       //$("#user_form").removeClass("hidden");
       $("#dept_grad_select").hide();
@@ -75,16 +88,22 @@
     }
   }
   
-  function change_degree(){
-    var sel=$("#degree_select").val();
-    var arr=['grad','under']
-    sel-=2;
+  function change_degree(id){
+    //var sel=$("#degree_select").val();
+		
+    var arr={
+			2:'grad',
+			3:'under_grad'
+		};
+		
+		arr[id].show();
+    //sel-=2;
     for(i=0;i<arr.length;i++){
       if(i==sel){
-        $("#dept_"+arr[i]+"_select").show();
+        $("#"+arr[i]).show();
       }
       else{
-        $("#dept_"+arr[i]+"_select").hide();
+        $("#"+arr[i]).hide();
       }
     }
   }
