user edit page ver 0.8

--- a/app/views/courses/search/_graduate_options.html.erb
+++ b/app/views/courses/search/_graduate_options.html.erb
@@ -75,40 +75,7 @@
 <option value="153">亞際文化研究國際碩士學位學程</option>
 <option value="157">工學院</option>
 <option value="158">電機學院(研究所)</option>
-<option value="160">管理學院院本部</option>
+<option value="160">管理學院</option>
 <option value="161">管理學院專班(共同課程)</option>
 <option value="162">光電學院</option>
-<option value="165">理學院院本部</option>
-<option value="166">高雄大學研究所</option>
-<option value="175">國防大學研究所</option>
-<option value="178">金門大學研究所</option>
-<option value="182">亞洲大學研究所</option>
-<option value="185">聯合大學研究所</option>
-<option value="190">高雄師範大學研究所</option>
-<option value="200">台灣藝術大學研究所</option>
-<option value="202">台中教育大學研究所</option>
-<option value="209">清華大學研究所</option>
-<option value="210">中央大學研究所</option>
-<option value="211">陽明大學研究所</option>
-<option value="212">新竹教育大學研究所</option>
-<option value="213">中華大學研究所</option>
-<option value="214">台灣大學研究所</option>
-<option value="215">政治大學研究所</option>
-<option value="216">台灣師範大學研究所</option>
-<option value="217">成功大學研究所</option>
-<option value="219">台北藝術大學研究所</option>
-<option value="222">中興大學研究所</option>
-<option value="226">國立台北教育大學研究所</option>
-<option value="227">東華大學研究所</option>
-<option value="231">輔仁大學研究所</option>
-<option value="232">東吳大學研究所</option>
-<option value="233">文化大學研究所</option>
-<option value="235">世新大學研究所</option>
-<option value="239">中原大學研究所</option>
-<option value="240">玄奘大學研究所</option>
-<option value="241">逢甲大學研究所</option>
-<option value="243">東海大學研究所</option>
-<option value="248">台灣科技大學研究所</option>
-<option value="249">台北科技大學研究所</option>
-<option value="254">中山醫學大學研究所</option>
-<option value="259">外國學校</option>
+<option value="165">理學院</option>
