update book trade

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -47,7 +47,7 @@
 					</div>
 					<div class="supplemental-info" onmouseover="$(this).parent().attr('onclick','')" onmouseleave="$(this).parent().attr('onclick','goToHref($(this).attr(\'href\'));')">
 						<% user=sale_book.user %>	
-						<% if user.hasFB? %>
+						<% if user.hasFb? %>
 							<%=image_tag "http://graph.facebook.com/#{user.uid}/picture",size:"25x25", style:"border-radius:3px;"%>
 						<% else %>
 							
