--- a/app/views/main/member_intro.html.erb
+++ b/app/views/main/member_intro.html.erb
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
 <html>
 <head>
   <title></title>
-  <meta charset="UTF-8" />
   <%= stylesheet_link_tag "member/introduction" %>
 </head>
 <body>
+<section>
+  <h1 style="text-align: center;"><b>成員介紹</b></h1>
+  <hr size="10" align="center" noshade width="100%" color="#f0f0f0">
+</section>
 <section id="t-cards">
   <div class="container">
     <div class="row">
       <div class="col-sm-6 col-md-3">
         <div class="panel panel-default panel-card">
-          <div class="panel-heading valign-wrapper">
+          <div class="panel-heading valign-wrapper" style="background-color: #64b5f6">
             <div class="container">
               <h3 class="panel-header">Programmer</h3>
               <p class="text-center">資訊工程學系</p>
@@ -35,7 +37,7 @@
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="panel panel-default panel-card">
-          <div class="panel-heading valign-wrapper">
+          <div class="panel-heading valign-wrapper" style="background-color: #bbdefb">
             <div class="container">
               <h3 class="panel-header">Administrator</h3>
               <p class="text-center">電機工程學系</p>
@@ -59,7 +61,7 @@
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="panel panel-default panel-card">
-          <div class="panel-heading valign-wrapper">
+          <div class="panel-heading valign-wrapper" style="background-color: #64b5f6">
             <div class="container">
               <h3 class="panel-header">Programmer</h3>
               <p class="text-center">資訊工程學系</p>
@@ -83,7 +85,7 @@
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="panel panel-default panel-card">
-          <div class="panel-heading valign-wrapper">
+          <div class="panel-heading valign-wrapper" style="background-color: #64b5f6">
             <div class="container">
                      <h3 class="panel-header">Programmer</h3>
                      <p class="text-center">資訊工程學系</p>
@@ -109,7 +111,7 @@
     <div class="row">
       <div class="col-sm-6 col-md-3">
         <div class="panel panel-default panel-card">
-          <div class="panel-heading valign-wrapper">
+          <div class="panel-heading valign-wrapper" style="background-color: #64b5f6">
             <div class="container">
               <h3 class="panel-header">Programmer</h3>
               <p class="text-center">電子工程學系</p>
@@ -133,7 +135,7 @@
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="panel panel-default panel-card">
-          <div class="panel-heading valign-wrapper">
+          <div class="panel-heading valign-wrapper" style="background-color: #64b5f6">
             <div class="container">
               <h3 class="panel-header">Programmer</h3>
               <p class="text-center">資訊工程學系</p>
@@ -157,7 +159,7 @@
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="panel panel-default panel-card">
-          <div class="panel-heading valign-wrapper">
+          <div class="panel-heading valign-wrapper" style="background-color: #64b5f6">
             <div class="container">
               <h3 class="panel-header">Programmer</h3>
               <p class="text-center">資訊工程學系</p>
@@ -181,7 +183,7 @@
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="panel panel-default panel-card">
-          <div class="panel-heading valign-wrapper">
+          <div class="panel-heading valign-wrapper" style="background-color: #90caf9">
             <div class="container">
                      <h3 class="panel-header">Designer</h3>
                      <p class="text-center">傳播科學系</p>
@@ -207,7 +209,7 @@
     <div class="row">
       <div class="col-sm-6 col-md-3">
         <div class="panel panel-default panel-card">
-          <div class="panel-heading valign-wrapper">
+          <div class="panel-heading valign-wrapper" style="background-color: #64b5f6">
             <div class="container">
               <h3 class="panel-header">Programmer</h3>
               <p class="text-center">資訊工程學系</p>
@@ -231,7 +233,7 @@
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="panel panel-default panel-card">
-          <div class="panel-heading valign-wrapper">
+          <div class="panel-heading valign-wrapper" style="background-color: #90caf9">
             <div class="container">
               <h3 class="panel-header">Designer</h3>
               <p class="text-center">工業工程與管理學系</p>
@@ -255,7 +257,7 @@
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="panel panel-default panel-card">
-          <div class="panel-heading valign-wrapper">
+          <div class="panel-heading valign-wrapper" style="background-color: #64b5f6">
             <div class="container">
               <h3 class="panel-header">Programmer</h3>
               <p class="text-center">資訊工程學系</p>
@@ -279,7 +281,7 @@
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="panel panel-default panel-card">
-          <div class="panel-heading valign-wrapper">
+          <div class="panel-heading valign-wrapper" style="background-color: #64b5f6">
             <div class="container">
               <h3 class="panel-header">Programmer</h3>
               <p class="text-center">資訊工程學系</p>
@@ -305,7 +307,7 @@
     <div class="row">
       <div class="col-sm-6 col-md-3">
         <div class="panel panel-default panel-card">
-          <div class="panel-heading valign-wrapper">
+          <div class="panel-heading valign-wrapper" style="background-color: #bbdefb">
             <div class="container">
               <h3 class="panel-header">Marketing</h3>
               <p class="text-center">管理科學系</p>
@@ -329,7 +331,7 @@
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="panel panel-default panel-card">
-          <div class="panel-heading valign-wrapper">
+          <div class="panel-heading valign-wrapper" style="background-color: #90caf9">
             <div class="container">
               <h3 class="panel-header">Designer</h3>
               <p class="text-center">資訊管理與財務金融學系</p>
