--- a/app/views/user/statistics_table.html.erb
+++ b/app/views/user/statistics_table.html.erb
@@ -14,6 +14,10 @@ table td {
 	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 	<%= javascript_include_tag "user_course_stat/report-table", "data-turbolinks-track" => true %>
 	<%= stylesheet_link_tag asset_path("application.css") %>
+
+	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+	<%= javascript_include_tag "user_course_stat/report-table", "data-turbolinks-track" => true %>
+	<%= stylesheet_link_tag asset_path("application.css") %>
 </head>
 <table class='table table-bordered text-family fixed' id="ctable"></table>
 
