member_introduction adj background change

--- a/app/views/main/member_intro.html.erb
+++ b/app/views/main/member_intro.html.erb
@@ -2,6 +2,11 @@
 <head>
   <title></title>
   <%= stylesheet_link_tag "member/introduction" %>
+<style>
+  body {
+  background-image: url("/assets/photo/member_background.jpg");
+}
+</style>
 </head>
 <body>
 <section>
